# OpsMonitoringDash

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_monitoring_schema.py  003_source_status_columns.py  004_rename_api_football_to_sports_api.py  005_add_espn_status.py  006_api_usage_snapshots.py  007_add_oddsblaze_status.py  008_add_status_authority_columns.py  009_drop_sports_api_status.py  010_add_opticodds_status.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/clients/: base.py  espn_api.py  odds_api.py  oddsblaze_api.py  prophetx.py  sports_api.py  sportsdataio.py
backend/app/core/: config.py  constants.py  security.py
backend/app/db/: redis.py  session.py  sync_session.py
backend/app/models/: __init__.py  api_usage_snapshot.py  audit_log.py  config.py  event.py  event_id_mapping.py  market.py  notification.py  user.py
backend/app/monitoring/: authority.py  event_matcher.py  liquidity_monitor.py  mismatch_detector.py
backend/app/schemas/: __init__.py  (+6 more)
backend/scripts/: validate_confidence.py
backend/tests/: conftest.py  test_auth.py  test_cleanup_old_events.py  test_clients.py  test_event_matcher.py  test_event_schema.py  test_health.py  test_interval_validation.py  test_liquidity_monitor.py  test_mismatch_detector.py  test_opticodds_consumer.py  test_source_toggle.py  test_status_authority.py  test_update_event_status.py  test_ws_diagnostics.py  test_ws_reconnect.py  test_ws_upsert.py
(+216 files in other folders)
