[project]
name = "prophet-monitor"
version = "0.1.0"
description = "Prophet API Monitoring Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "PyJWT>=2.0",
    "pwdlib[bcrypt]>=0.2",
    "celery[redis]>=5.4",
    "celery-redbeat>=2.0",
    "rapidfuzz>=3.14.3",
    "sse-starlette>=3.2.0",
    "slack-sdk>=3.40.1",
    "pysher>=1.0",
    "pika>=1.3.2,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
